--- a/vendas/src/main/AndroidManifest.xml
+++ b/vendas/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         android:icon="@drawable/ic_palmvenda"
         android:label="@string/app_name"
+        android:theme="@style/AppTheme"
         android:requestLegacyExternalStorage="true">
 
 		<meta-data android:name="com.google.android.gms.version"
