--- a/vendas/src/main/AndroidManifest.xml
+++ b/vendas/src/main/AndroidManifest.xml
@@ -65,7 +65,8 @@
         <activity android:name="PedidoItemNovo"></activity>
         <activity android:name="PedidoInfAdicional"></activity>  
         <activity android:name="GeoLocalizacao"></activity>
-        <activity android:name="MySql"></activity>  
+        <activity android:name="MySql"></activity>
+        <activity android:name="UtilitarioPrincipal"></activity>
         <activity android:name="Localizacao"></activity>  
         <receiver
             android:name="BroadcastReceive"
