--- a/vendas/build.gradle
+++ b/vendas/build.gradle
@@ -28,7 +28,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0'
 
-    //implementation 'androidx.activity:activity:1.9.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.sun.mail:android-mail:1.6.0'
     implementation 'com.android.support:support-v4:27.1.0'
@@ -41,7 +40,6 @@ dependencies {
     implementation files('libs/commons-net-1.4.1.jar')
     implementation files('libs/ksoap2-android-assembly-3.2.0-jar-with-dependencies.jar')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    //implementation 'androidx.appcompat:appcompat:1.7.0'
-    //implementation 'androidx.core:core-ktx:1.13.1'
+    //implementation 'androidx.recyclerview:recyclerview:1.3.2'
+
 }
