--- a/vendas/build.gradle
+++ b/vendas/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     implementation files('libs/commons-net-1.4.1.jar')
     implementation files('libs/ksoap2-android-assembly-3.2.0-jar-with-dependencies.jar')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    //implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 
 }
