--- a/vendas/build.gradle
+++ b/vendas/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     implementation files('libs/ksoap2-android-assembly-3.2.0-jar-with-dependencies.jar')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-
+    implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
 }
