--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 27 19:04:46 GFT 2023
-sdk.dir=D\:\\sdk
+#Wed Jun 19 11:35:01 BRT 2024
+sdk.dir=C\:\\Users\\0073183\\AppData\\Local\\Android\\Sdk
