--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,63 @@
-/vendas/
+# hprof
 /*.hprof
+
+# Ignore root files
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+/.idea/modules.xml
+/.idea/.name
+.idea/*
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+
+# Android Studio
+.idea/caches
+.idea/inspectionProfiles
+.idea/libraries
+.idea/modules.xml
+.idea/workspace.xml
+.idea/codeStyles/Project.xml
+.idea/.name
+.idea/misc.xml
+.idea/modules
+.idea/vcs.xml
+*.iml
+*.ipr
+*.iws
+.idea
+
+# Build output
+/build
+/app/build
+/**/*.iml
+
+# Local configuration file (sdk path, etc)
+/local.properties
+
+# Keystore files
+*.jks
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+
+# Gradle
+.gradle/
+/build/
+/*/build/
+
+# Signatures
+.vscode/
+.signing/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# NDK
+obj/
+
