--- a/vendas/build.gradle
+++ b/vendas/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services:+'
     //implementation 'com.google.android.gms:play-services-ads:17.1.1'
     //compile 'com.google.android.gms:play-services-safetynet:16.0.0'
-    implementation 'com.itextpdf:itextg:5.5.9'
+    implementation 'com.itextpdf:itext7-core:7.1.15'
     implementation 'com.android.volley:volley:1.1.0'
     implementation files('libs/commons-net-1.4.1.jar')
     implementation files('libs/ksoap2-android-assembly-3.2.0-jar-with-dependencies.jar')
