--- a/vendas/src/main/AndroidManifest.xml
+++ b/vendas/src/main/AndroidManifest.xml
@@ -22,6 +22,16 @@
         android:theme="@style/AppTheme"
         android:requestLegacyExternalStorage="true">
 
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
 		<meta-data android:name="com.google.android.gms.version"
     		android:value="@integer/google_play_services_version" />
         <activity
