--- a/vendas/build.gradle
+++ b/vendas/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.8.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 
     testImplementation 'junit:junit:4.12'
     implementation 'com.sun.mail:android-mail:1.6.0'
