--- a/vendas/src/main/AndroidManifest.xml
+++ b/vendas/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:icon="@drawable/ic_palmvenda"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true">
 
         <provider
