--- a/vendas/build.gradle
+++ b/vendas/build.gradle
@@ -4,6 +4,9 @@ android {
     compileSdk 34
     useLibrary 'org.apache.http.legacy'
 
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 
     defaultConfig {
         applicationId "vendas.telas"
@@ -31,9 +34,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.sun.mail:android-mail:1.6.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.android.gms:play-services:+'
     //implementation 'com.google.android.gms:play-services-ads:17.1.1'
@@ -42,7 +48,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation files('libs/commons-net-1.4.1.jar')
     implementation files('libs/ksoap2-android-assembly-3.2.0-jar-with-dependencies.jar')
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    //implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.drawerlayout:drawerlayout:1.2.0'
 }
