--- a/vendas/src/main/AndroidManifest.xml
+++ b/vendas/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <!-- Without this folders will be inaccessible in Android-11 and above devices -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
